[gd_scene load_steps=5 format=2]

[ext_resource path="res://inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://inventory/EquipmentSlots.gd" type="Script" id=2]
[ext_resource path="res://inventory/bag_grid.png" type="Texture" id=3]
[ext_resource path="res://inventory/GridBackpack.gd" type="Script" id=4]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="InventoryBase" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -560.0
margin_top = -296.0
margin_right = 560.0
margin_bottom = 296.0

[node name="EquipmentSlots" type="Panel" parent="."]
modulate = Color( 0.87451, 0.807843, 0.807843, 1 )
self_modulate = Color( 0.866667, 0.756863, 0.756863, 1 )
margin_left = 816.0
margin_top = 96.0
margin_right = 1136.0
margin_bottom = 624.0
script = ExtResource( 2 )

[node name="HEAD" type="Panel" parent="EquipmentSlots"]
margin_left = 112.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 112.0

[node name="CHEST" type="Panel" parent="EquipmentSlots"]
margin_left = 112.0
margin_top = 128.0
margin_right = 224.0
margin_bottom = 352.0

[node name="MAIN_HAND" type="Panel" parent="EquipmentSlots"]
margin_left = 16.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 352.0

[node name="LEGS" type="Panel" parent="EquipmentSlots"]
margin_left = 112.0
margin_top = 368.0
margin_right = 224.0
margin_bottom = 480.0

[node name="GridBackpack" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 248.0
texture = ExtResource( 3 )
script = ExtResource( 4 )
